# rust-short-url

./: .gitignore  00_start.ps1  Cargo.toml  Dockerfile  README.md  api-test.js  compose.yaml
.github/workflows/: ci-cd.yml  docker-publish.yml
docs/: url-shortener.drawio
src/: api.rs  constants.rs  lib.rs  main.rs  models.rs  services.rs
src/api/: authmiddleware.rs  httpserver.rs  ratelimiter.rs  ratelimitermiddleware.rs
src/configuration/: development.toml  production.toml  settings.rs
src/models/: analytic.rs  builders.rs  linkinfo.rs  queryparams.rs
src/services/: coordinatorhashservice.rs  firestorehashservice.rs  hashfunction.rs  hashservice.rs  hashserviceerror.rs  hashservicefactory.rs  inmemoryhashservice.rs  mongohashservice.rs  persistenthashservice.rs  redishashservice.rs
src/stats/: collector.rs
tests/: api_test.rs  collector_test.rs  hashfunction_test.rs  inmemoryhashservice_test.rs  integration_test.rs  persistenthashservice_test.rs  ratelimiter_test.rs
