[package]
name = "rust-short-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web = "4.4.0"
async-trait = "0.1.74"
chrono = "0.4.39"
clap = { version = "4.4.11", features = ["derive"] }
config = "0.13.4"
derive_more = "0.99.17"
env_logger = "0.10.1"
firestore = "0.44.0"
futures-util = "0.3.29"
hash_ring = "0.2.0"
log = "0.4.20"
mongodb = "2.7.1"
redis = { version = "0.25.3", features = ["json"] }
redis-macros = "0.3.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
thiserror = "1.0.50"
tokio = { version = "1.35.1", features = ["full"] }
user-agent-parser = "0.3.6"
